@@ -1,4 +1,5 @@
 3.0.17
+ * Fix progress stats and units in compactionstats (CASSANDRA-12244)
  * Delay hints store excise by write timeout to avoid race with decommission (CASSANDRA-13740)
  * Deprecate background repair and probablistic read_repair_chance table options
    (CASSANDRA-13910)
